# senders-io

./: CMakeLists.txt
cmake/: FetchStdexec.cmake  Findliburing.cmake  sio-config.cmake
examples/: CMakeLists.txt  batched_reads.cpp  echo_standard_input.cpp  tcp_echo_server.cpp
source/sio/: async_channel.hpp  async_resource.hpp  memory_pool.hpp  net_concepts.hpp  read_batched.hpp  tap.hpp
source/sio/event_loop/: REFACTORING.md  concepts.hpp  file_handle.hpp  scheduler.hpp  socket_handle.hpp  timer.hpp
source/sio/event_loop/dpdk/: README.md
source/sio/event_loop/epoll/: README.md  backend.hpp  context.hpp  details.hpp  fd_close.hpp  fd_read.hpp  fd_write.hpp  file_open.hpp  run_sender.hpp  scheduler.hpp  socket_accept.hpp  socket_connect.hpp  socket_open.hpp  socket_sendmsg.hpp
source/sio/event_loop/iouring/: README.md  backend.hpp  context.hpp  details.hpp  fd_close.hpp  fd_read.hpp  fd_write.hpp  file_open.hpp  operations.hpp  run_sender.hpp  scheduler.hpp  socket_accept.hpp  socket_connect.hpp  socket_open.hpp  socket_sendmsg.hpp  submission_operation.hpp
source/sio/event_loop/native/: README.md
source/sio/event_loop/stdexec/: backend.hpp  details.h  fd_close.h  fd_read.h  fd_write.h  file_open.h  socket_accept.h  socket_connect.h  socket_open.h  socket_sendmsg.h
source/sio/intrusive/: heap.hpp  list.hpp  queue.hpp
source/sio/ip/: resolve.hpp
source/sio/local/: endpoint.hpp  socket_options.hpp
source/sio/sequence/: buffered_sequence.hpp  finally.hpp  first.hpp  fork.hpp  last.hpp  merge_each.hpp  repeat.hpp  scan.hpp  sequence_concepts.hpp  zip.hpp
tests/: CMakeLists.txt  MIGRATION.md  backend_matrix.hpp  test_async_accept.cpp  test_async_channel.cpp  test_file_handle.cpp  test_read_batched.cpp
tests/common/: backend_matrix.hpp  test_receiver.hpp
tests/file/: CMakeLists.txt  test_file_handle.cpp  test_read_batched.cpp
tests/intrusive/: CMakeLists.txt  test_heap.cpp  test_list.cpp  test_queue.cpp
tests/net/: CMakeLists.txt  test_async_accept.cpp  test_can_socket.cpp  test_resolve.cpp  test_socket_handle.cpp  test_unix_socket.cpp
tests/sequence/: CMakeLists.txt  test_buffered_sequence.cpp  test_fork.cpp  test_ignore_all.cpp  test_last.cpp
